--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -15,43 +15,42 @@
                             <li class="list-group-item theater">劇場 : <span></span></li>
                             <li class="list-group-item day">上映日 : <span></span></li>
                         </ul>
-                        <div class="form-group row">
-                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="doorTime">開場時刻</label>
-                            <div class="col-md-8 form-inline">
+                        <div class="form-group">
+                            <label class="" for="doorTime">開場時刻</label>
+                            <div class="form-inline">
                                 <%- include('../../common/part/_timeSelector', {
                                     hourName: 'doorTimeHour',
                                     minuteName: 'doorTimeMinutes'
                                 }) %>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="startTime">開始時刻</label>
-                            <div class="col-md-8 form-inline">
+                        <div class="form-group">
+                            <label class="" for="startTime">開始時刻</label>
+                            <div class="form-inline">
                                 <%- include('../../common/part/_timeSelector', {
                                     hourName: 'startTimeHour',
                                     minuteName: 'startTimeMinutes'
                                 }) %>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="endTime">終了時刻</label>
-                            <div class="col-md-8 form-inline">
+                        <div class="form-group">
+                            <label class="" for="endTime">終了時刻</label>
+                            <div class="form-inline">
                                 <%- include('../../common/part/_timeSelector', {
                                     hourName: 'endTimeHour',
                                     minuteName: 'endTimeMinutes'
                                 }) %>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="screen">スクリーン</label>
-                            <div class="col-md-8">
+                        <div class="form-group">
+                            <label class="" for="screen">スクリーン</label>
+                            <div class="">
                                 <select class="form-control" name="screen"></select>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
-                                for="ticketTypeGroup">券種グループ</label>
-                            <div class="col-md-8">
+                        <div class="form-group">
+                            <label class="" for="ticketTypeGroup">券種グループ</label>
+                            <div class="">
                                 <select class="form-control" name="ticketTypeGroup">
                                     <option value="">選択してください</option>
                                     <% for (ticketType of ticketGroups) { %>
@@ -62,10 +61,9 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
-                                for="saleStartDate">販売開始日</label>
-                            <div class="col-md-8 form-inline">
+                        <div class="form-group">
+                            <label class="" for="saleStartDate">販売開始日</label>
+                            <div class="form-inline">
                                 <input class="form-control datepicker" name="saleStartDate" placeholder="YYYY/MM/DD"
                                     maxlength=10>
                                 日
@@ -75,48 +73,44 @@
                                 }) %>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
-                                for="onlineDisplayStartDate">オンライン表示開始日</label>
-                            <div class="col-md-8 form-inline">
+                        <div class="form-group">
+                            <label class="" for="onlineDisplayStartDate">オンライン表示開始日</label>
+                            <div class="form-inline">
                                 <input class="form-control datepicker" name="onlineDisplayStartDate"
                                     placeholder="YYYY/MM/DD" maxlength=10>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
-                                for="maxSeatNumber">上限枚数</label>
-                            <div class="col-md-8 form-inline">
+                        <div class="form-group">
+                            <label class="" for="maxSeatNumber">上限枚数</label>
+                            <div class="form-inline">
                                 <input class="form-control" type="number" name="maxSeatNumber" maxlength=10>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+                        <div class="form-group">
+                            <label for="name" class="">
                             </label>
-                            <div class="col-md-8">
-                                <div class="form-check">
+                            <div class="form-check">
+                                <label class="form-check-label" for="mvtkExcludeFlg">
                                     <input class="form-check-input" type="checkbox" name="mvtkExcludeFlg" value="1"
                                         id="mvtkExcludeFlg">
-                                    <label class="form-check-label" for="mvtkExcludeFlg">
-                                        ムビチケ対象外
-                                    </label>
-                                </div>
+                                    ムビチケ対象外
+                                    <span class="form-check-sign">
+                                        <span class="check"></span>
+                                    </span>
+                                </label>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-                            </label>
-                            <div class="col-md-8">
-                                <div class="form-check">
-                                    <input disabled class="form-check-input" type="checkbox"
-                                        name="reservedSeatsAvailableDisabled" value="1"
-                                        id="reservedSeatsAvailableDisabled">
-                                    <input type="hidden" value="1" name="reservedSeatsAvailable">
-
-                                    <label class="form-check-label" for="reservedSeatsAvailable">
-                                        座席指定あり
-                                    </label>
-                                </div>
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input disabled class="form-check-input" type="checkbox"
+                                    name="reservedSeatsAvailableDisabled" value="1" id="reservedSeatsAvailableDisabled">
+                                <input type="hidden" value="1" name="reservedSeatsAvailable">
+                                <label class="form-check-label" for="reservedSeatsAvailable">
+                                    座席指定あり
+                                    <span class="form-check-sign">
+                                        <span class="check"></span>
+                                    </span>
+                                </label>
                             </div>
                         </div>
                     </form>
