--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-パフォーマンスマスタ一覧
+パフォーマンス検索
 <%- contentFor('displayId') %>
 Aa-4
 <%- contentFor('styles') %>
@@ -11,72 +11,63 @@ Aa-4
 
 <div class="form-container search p-3 bg-light-gray mb-4">
     <form>
-        <div class="form-group row">
-            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">劇場 <span
-                    class="text-danger">＊</span></label>
-            <div class="col-md-8">
-                <select class="form-control" name="theater">
-                    <% if (user.cognitoGroups.movieTheaters === undefined) { %>
-                    <option value="">選択してください</option>
-                    <% for (const movieTheater of movieTheaters) { %>
-                    <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-                    <% } %>
-                    <% } else { %>
-                    <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-                    <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-                    <% } %>
-                    <% } %>
-                </select>
+        <div class="form-group">
+            <label class="">劇場 <span class="text-danger">＊</span></label>
+            <select class="form-control" name="theater">
+                <% if (user.cognitoGroups.movieTheaters === undefined) { %>
+                <option value="">選択してください</option>
+                <% for (const movieTheater of movieTheaters) { %>
+                <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
+                <% } %>
+                <% } else { %>
+                <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+                <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
+                <% } %>
+                <% } %>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label class="">上映日 <span class="text-danger">＊</span></label>
+            <input autocomplete="off" class="form-control datepicker" name="date" placeholder="選択してください" maxlength="10">
+        </div>
+
+        <div class="form-group">
+            <label class="">日付 <span class="text-danger">＊</span></label>
+            <div class="d-flex align-items-center">
+                <input class="d-block" type="radio" name="days" id="radio-days-1" value="1" checked>
+                <label class="d-block mr-3" for="radio-days-1">1日</label>
+                <input class="d-block" type="radio" name="days" id="radio-days-3" value="3">
+                <label class="d-block mr-3" for="radio-days-3">3日</label>
+                <input class="d-block" type="radio" name="days" id="radio-days-7" value="7">
+                <label class="d-block" for="radio-days-7">7日</label>
             </div>
         </div>
 
-        <div class="form-group row">
-            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">上映日 <span
-                    class="text-danger">＊</span></label>
-            <div class="col-md-8">
-                <input autocomplete="off" class="form-control datepicker" name="date" placeholder="選択してください"
-                    maxlength="10">
-            </div>
+        <div class="form-group">
+            <label class="">シアター</label>
+            <select class="form-control" name="screen">
+                <option value="">劇場を選択してください</option>
+            </select>
         </div>
 
-        <div class="form-group row">
-            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">日付 <span
-                    class="text-danger">＊</span></label>
-            <div class="col-md-8 py-3">
-                <div class="d-flex align-items-center">
-                    <input class="d-block" type="radio" name="days" id="radio-days-1" value="1" checked>
-                    <label class="d-block mr-3" for="radio-days-1">1日</label>
-                    <input class="d-block" type="radio" name="days" id="radio-days-3" value="3">
-                    <label class="d-block mr-3" for="radio-days-3">3日</label>
-                    <input class="d-block" type="radio" name="days" id="radio-days-7" value="7">
-                    <label class="d-block" for="radio-days-7">7日</label>
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">シアター</label>
-            <div class="col-md-8">
-                <select class="form-control" name="screen">
-                    <option value="">劇場を選択してください</option>
-                </select>
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"></label>
-            <div class="col-md-8 py-3">
-                <div class="d-flex align-items-center">
-                    <input class="d-block mr-2" type="checkbox" name="onlyReservedSeatsAvailable"
+        <div class="form-group">
+            <div class="form-check">
+                <label class="form-check-label" for="onlyReservedSeatsAvailable">
+                    <input class="form-check-input" type="checkbox" name="onlyReservedSeatsAvailable"
                         id="onlyReservedSeatsAvailable" value="1">
-                    <label class="d-block" for="onlyReservedSeatsAvailable">座席指定有のみ</label>
-                </div>
+                    座席指定有のみ
+                    <span class="form-check-sign">
+                        <span class="check"></span>
+                    </span>
+                </label>
             </div>
         </div>
 
         <div class="panel-body">
-            <button type="button" class="btn btn-primary search-button">検索する</button>
-            <button type="button" class="btn btn-primary pull-right add-button">新規作成</button>
+            <button type="button" class="btn btn-primary add-button"><i class=" fa fa-plus"></i> 登録</button>
+
+            <button type="button" class="btn search btn-ok btn-success search-button pull-right">検索</button>
         </div>
     </form>
 </div>
