--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-作品マスタ一覧
+作品検索
 <%- contentFor('displayId') %>
 Aa-3
 <%- contentFor('styles') %>
@@ -19,60 +19,58 @@ Aa-3
         <div class="menu-group">
         </div>
 
-        <div class="form-group row">
-            <label for="locationBranchCode" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="locationBranchCode" class="">
                 劇場
             </label>
-            <div class="col-md-8">
-                <select class="form-control" name="locationBranchCode">
-                    <% if (user.cognitoGroups.movieTheaters === undefined) { %>
-                    <option value="">選択してください</option>
-                    <% for (const movieTheater of movieTheaters) { %>
-                    <option value="<%= movieTheater.branchCode %>">
-                        <%= movieTheater.name.ja %>
-                    </option>
-                    <% } %>
-                    <% } else { %>
-                    <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-                    <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-                    <% } %>
-                    <% } %>
-                </select>
-            </div>
+            <select class="form-control" name="locationBranchCode">
+                <% if (user.cognitoGroups.movieTheaters === undefined) { %>
+                <option value="">選択してください</option>
+                <% for (const movieTheater of movieTheaters) { %>
+                <option value="<%= movieTheater.branchCode %>">
+                    <%= movieTheater.name.ja %>
+                </option>
+                <% } %>
+                <% } else { %>
+                <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+                <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
+                <% } %>
+                <% } %>
+            </select>
         </div>
-        <div class="form-group row">
-            <label for="movieIdentifier" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="movieIdentifier" class="">
                 作品コード
             </label>
-            <div class="col-md-8">
-                <input type="text" class="form-control" name="movieIdentifier" id="movieIdentifier" placeholder=""
-                    maxlength=64 value="">
-            </div>
+            <input type="text" class="form-control" name="movieIdentifier" id="movieIdentifier" placeholder=""
+                maxlength=64 value="">
         </div>
-        <div class="form-group row">
-            <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="name" class="">
                 上映作品名
             </label>
-            <div class="col-md-8">
-                <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="">
-            </div>
+            <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="">
         </div>
-        <div class="form-group row">
-            <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="name" class="">
             </label>
-            <div class="col-md-8">
-                <div class="form-check">
+            <div class="form-check">
+                <label class="form-check-label" for="containsEnded">
                     <input class="form-check-input" type="checkbox" name="containsEnded" value="1" id="containsEnded">
-                    <label class="form-check-label" for="containsEnded">
-                        終了作品を含む
-                    </label>
-                </div>
+                    終了作品を含む
+                    <span class="form-check-sign">
+                        <span class="check"></span>
+                    </span>
+                </label>
             </div>
         </div>
 
         <div class="panel-body">
-            <button type="button" class="btn btn-ok search btn-primary">検索する</button>
-            <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
+            <a class="btn btn-primary" role="button" href="/events/screeningEventSeries/add">
+                <i class=" fa fa-plus"></i> 登録</a>
+
+            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
         </div>
     </form>
 </div>
