--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -16,8 +16,19 @@
     <!-- <link rel="stylesheet" href="/node_modules/admin-lte/plugins/font-awesome/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
     <link href="/css/style.css" rel="stylesheet">
+
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css"
+        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
+    <!-- Material Dashboard CSS -->
+    <link rel="stylesheet" href="/node_modules/material-dashboard/assets/css/material-dashboard.min.css?v=2.1.1">
+
     <%- defineContent('styles') %>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -36,5 +47,30 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.21/moment-timezone.js" type="text/javascript"></script> -->
     <script src="/js/master/common.js"></script>
+
+    <!--   Core JS Files   -->
+    <script src="/node_modules/material-dashboard/assets/js/core/popper.min.js" type="text/javascript"></script>
+    <script src="/node_modules/material-dashboard/assets/js/core/bootstrap-material-design.min.js"
+        type="text/javascript"></script>
+
+    <!-- Plugin for the Perfect Scrollbar -->
+    <script src="/node_modules/material-dashboard/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+
+    <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
+    <!-- <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-selectpicker.js"></script> -->
+
+    <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
+    <!-- <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-datetimepicker.min.js"></script> -->
+
+    <!--  DataTables.net Plugin, full documentation here: https://datatables.net/    -->
+    <!-- <script src="/node_modules/material-dashboard/assets/js/plugins/jquery.datatables.min.js"></script> -->
+
+    <!--  Notifications Plugin    -->
+    <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-notify.js"></script>
+
+    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="/node_modules/material-dashboard/assets/js/material-dashboard.min.js?v=2.1.1"
+        type="text/javascript"></script>
+
     <%- defineContent('scripts') %>
 </head>
