--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -18,73 +18,68 @@ PS-02
         <div class="menu-group">
         </div>
 
-        <div class="form-group row">
-            <label for="typeOf" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="typeOf" class="">
                 価格仕様タイプ
             </label>
-            <div class="col-md-8">
-                <select class="form-control" name="typeOf">
-                    <option value="" selected>選択してください</option>
-                    <% Object.values(PriceSpecificationType).forEach((type) => { %>
-                    <option value="<%= type %>">
-                        <%= type %>
-                    </option>
-                    <% }) %>
-                </select>
-            </div>
+            <select class="form-control" name="typeOf">
+                <option value="" selected>選択してください</option>
+                <% Object.values(PriceSpecificationType).forEach((type) => { %>
+                <option value="<%= type %>">
+                    <%= type %>
+                </option>
+                <% }) %>
+            </select>
         </div>
 
-        <div class="form-group row">
-            <label for="appliesToMovieTicketType" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="appliesToMovieTicketType" class="">
                 適用ムビチケ券種区分
             </label>
-            <div class="col-md-8">
-                <select class="form-control" name="appliesToMovieTicketType">
-                    <option value="" selected>選択してください</option>
-                    <% Object.values(MovieTicketType).forEach((type) => { %>
-                    <option value="<%= type.code %>">
-                        <%= type.code %> <%= type.name %>
-                    </option>
-                    <% }) %>
-                </select>
-            </div>
+            <select class="form-control" name="appliesToMovieTicketType">
+                <option value="" selected>選択してください</option>
+                <% Object.values(MovieTicketType).forEach((type) => { %>
+                <option value="<%= type.code %>">
+                    <%= type.code %> <%= type.name %>
+                </option>
+                <% }) %>
+            </select>
         </div>
 
-        <div class="form-group row">
-            <label for="appliesToVideoFormat" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="appliesToVideoFormat" class="">
                 適用上映方式
             </label>
-            <div class="col-md-8">
-                <select class="form-control" name="appliesToVideoFormat">
-                    <option value="" selected>選択してください</option>
-                    <% Object.values(VideoFormatType).forEach((type) => { %>
-                    <option value="<%= type %>">
-                        <%= type %>
-                    </option>
-                    <% }) %>
-                </select>
-            </div>
+            <select class="form-control" name="appliesToVideoFormat">
+                <option value="" selected>選択してください</option>
+                <% Object.values(VideoFormatType).forEach((type) => { %>
+                <option value="<%= type %>">
+                    <%= type %>
+                </option>
+                <% }) %>
+            </select>
         </div>
 
-        <div class="form-group row">
-            <label for="appliesToSoundFormat" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="appliesToSoundFormat" class="">
                 適用音響方式
             </label>
-            <div class="col-md-8">
-                <select class="form-control" name="appliesToSoundFormat">
-                    <option value="" selected>選択してください</option>
-                    <% Object.values(SoundFormatType).forEach((type) => { %>
-                    <option value="<%= type %>">
-                        <%= type %>
-                    </option>
-                    <% }) %>
-                </select>
-            </div>
+            <select class="form-control" name="appliesToSoundFormat">
+                <option value="" selected>選択してください</option>
+                <% Object.values(SoundFormatType).forEach((type) => { %>
+                <option value="<%= type %>">
+                    <%= type %>
+                </option>
+                <% }) %>
+            </select>
         </div>
 
         <div class="panel-body">
-            <button type="button" class="btn btn-ok search btn-primary">検索する</button>
-            <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
+            <a class="btn btn-primary" role="button" href="/priceSpecifications/new">
+                <i class=" fa fa-plus"></i> 登録</a>
+
+            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
         </div>
     </form>
 </div>
