--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-興行区分マスタ一覧
+興行区分検索
 <%- contentFor('displayId') %>
 Aa-17
 <%- contentFor('styles') %>
@@ -23,27 +23,26 @@ Aa-17
             <% } %>
         </div>
 
-        <div class="form-group row">
-            <label for="identifier" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="identifier" class="">
                 興行区分コード
             </label>
-            <div class="col-md-8">
-                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value="">
-            </div>
+            <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value="">
         </div>
 
-        <div class="form-group row">
-            <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        <div class="form-group">
+            <label for="name" class="">
                 名称
             </label>
-            <div class="col-md-8">
-                <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="">
-            </div>
+            <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="">
         </div>
 
         <div class="panel-body">
-            <button type="button" class="btn btn-ok search btn-primary">検索する</button>
-            <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
+            <a class="btn btn-primary" role="button" href="/serviceTypes/add">
+                <i class=" fa fa-plus"></i> 登録</a>
+
+            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
         </div>
     </form>
 </div>
