--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-券種グループマスタ一覧
+券種グループ検索
 <%- contentFor('displayId') %>
 Aa-8
 <%- contentFor('styles') %>
@@ -23,28 +23,27 @@ Aa-8
             </p>
             <% } %>
         </div>
-        <% /* 券種グループコード */ %>
-        <div class="form-group row">
-            <label for="id" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+        <div class="form-group">
+            <label for="id" class="">
                 券種グループコード
             </label>
-            <div class="col-md-8">
-                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64>
-            </div>
+            <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64>
         </div>
-        <% /* 券種グループ名 */ %>
-        <div class="form-group row">
-            <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+
+        <div class="form-group">
+            <label for="name" class="">
                 券種グループ名
             </label>
-            <div class="col-md-8">
-                <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
-            </div>
+            <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
         </div>
-        <% /* 検索ボタン */ %>
+
         <div class="panel-body">
-            <button type="button" class="btn btn-ok search btn-primary">検索する</button>
-            <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
+            <a class="btn btn-primary" role="button" href="/ticketTypeGroups/add">
+                <i class=" fa fa-plus"></i> 登録</a>
+
+            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
         </div>
     </form>
 </div>
